--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@
 # ==============================================================
 # spring.datasource.url = jdbc:mysql://localhost:3306/login?useSSL=true
 # spring.datasource.url= jdbc:postgresql://192.168.99.1:5432/prismadb 
-spring.datasource.url= jdbc:postgresql://localhost:5432/prismadb 
+spring.datasource.url= jdbc:postgresql://${POSTGRES_IP}:5432/prismadb 
+# spring.datasource.url= jdbc:postgresql://${POSTGRES_IP}:5432/prismadb 
 spring.datasource.username=postgres
 # spring.datasource.password=
 
@@ -42,16 +43,16 @@ spring.queries.roles-query=select u.email, r.role from tb_user u inner join user
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.application.name=user
+spring.application.name=user-service
 # spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongodb/${MONGO_DATABASE}
 # spring.data.mongodb.uri=mongodb://mongodb/microservice
-# spring.data.mongodb.host=localhost
+spring.data.mongodb.host=${POSTGRES_IP}
 # spring.data.mongodb.host=mongodb
-# spring.data.mongodb.port=27017
+spring.data.mongodb.port=27017
 # spring.data.mongodb.authentication-database=${MONGO_DATABASE}
 # spring.data.mongodb.username=[username]
 # spring.data.mongodb.password=[password]
-# spring.data.mongodb.database=microservices
+spring.data.mongodb.database=microservices
 # spring.data.mongodb.database=${MONGO_DATABASE}
 
 # spring.data.mongodb.host=localhost
@@ -59,3 +60,6 @@ spring.application.name=user
 # spring.data.mongodb.database=microservices
 
 logging.level.com.prisma.entity.user.model=DEBUG
+
+spring.microservices.emailaccount.host=localhost
+spring.microservices.emailaccount.port=8080
